// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:number 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderFull"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    aria-valuenow="456"
                    autocomplete="off"
                    class="amis-Number-input"
                    name="a"
                    role="spinbutton"
                    step="1"
                    value="456"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with big value 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderFull"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="true"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up amis-Number-handler-up-disabled"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    aria-valuemax="99999999999999999.99"
                    aria-valuemin="9999999999999999.99"
                    aria-valuenow="99999999999999999.99"
                    autocomplete="off"
                    class="amis-Number-input"
                    name="number"
                    role="spinbutton"
                    step="1"
                    value="99999999999999999.99"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with borderMode 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderNone"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    autocomplete="off"
                    class="amis-Number-input"
                    name="number"
                    role="spinbutton"
                    step="1"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with borderMode 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderHalf"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    autocomplete="off"
                    class="amis-Number-input"
                    name="number"
                    role="spinbutton"
                    step="1"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with precision and default value 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderFull"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    aria-valuenow="2.99"
                    autocomplete="off"
                    class="amis-Number-input"
                    name="number"
                    role="spinbutton"
                    step="0.01"
                    value="2.99"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with prefix & suffix & kilobitSeparator 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderFull"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    aria-valuenow="123456"
                    autocomplete="off"
                    class="amis-Number-input"
                    name="number"
                    role="spinbutton"
                    step="1"
                    value="$123,456%"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with step & precision & displayMode & keyboard 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-Form-control"
            >
              <div
                class="amis-Number--enhance amis-Number--enhance-borderFull"
              >
                <div
                  class="amis-Number--enhance-left-icon"
                >
                  <icon-mock
                    classname="icon icon-minus amis-InputNumber-enhance-minus icon"
                    icon="minus"
                  />
                </div>
                <div
                  class="amis-Number amis-Number--enhance-input amis-Number--borderFull"
                >
                  <div
                    class="amis-Number-handler-wrap"
                  >
                    <span
                      aria-disabled="false"
                      aria-label="Increase Value"
                      class="amis-Number-handler amis-Number-handler-up"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        class="amis-Number-handler-up-inner"
                        unselectable="on"
                      />
                    </span>
                    <span
                      aria-disabled="false"
                      aria-label="Decrease Value"
                      class="amis-Number-handler amis-Number-handler-down"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        class="amis-Number-handler-down-inner"
                        unselectable="on"
                      />
                    </span>
                  </div>
                  <div
                    class="amis-Number-input-wrap"
                  >
                    <input
                      aria-valuenow="14.111"
                      autocomplete="off"
                      class="amis-Number-input"
                      name="number"
                      role="spinbutton"
                      step="3"
                      value="14.111"
                    />
                  </div>
                </div>
                <div
                  class="amis-Number--enhance-right-icon"
                >
                  <icon-mock
                    classname="icon icon-plus amis-InputNumber-enhance-plus icon"
                    icon="plus"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:number with unitOptions 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    number
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-NumberControl amis-NumberControl--withUnit amis-Form-control"
            >
              <div
                class="amis-Number amis-Number--borderFull"
              >
                <div
                  class="amis-Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="amis-Number-handler amis-Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="amis-Number-handler amis-Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="amis-Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="amis-Number-input-wrap"
                >
                  <input
                    aria-valuenow="99"
                    autocomplete="off"
                    class="amis-Number-input"
                    name="number"
                    role="spinbutton"
                    step="1"
                    value="99"
                  />
                </div>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="amis-Select amis-NumberControl-unit"
                role="combobox"
                tabindex="0"
              >
                <div
                  class="amis-Select-valueWrap"
                >
                  <div
                    class="amis-Select-value"
                  >
                    em
                  </div>
                </div>
                <span
                  class="amis-Select-arrow"
                >
                  <icon-mock
                    classname="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="number"
            data-role="form-item"
          >
            <div
              class="amis-Form-static"
            >
              <div
                class="amis-Form-control"
              >
                <span
                  class="amis-PlainField"
                >
                  99em
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
